# DNA-origami-stability-prediction

./: .gitignore  README.md  environment.yaml  pyproject.toml
datasets/new_experiments_data/: new_experiments_df.csv
datasets/raw_data/: fps_sampled_indexes.npy  raw_data_origami_FULL.csv  raw_data_origami_HELDOUT.csv  raw_data_origami_TRAIN.csv
experiments/: README.md
experiments/Consensus_model_A/: MinMaxScaler.pkl  RMSE_cvscores_rep1.npy  RMSE_cvscores_rep2.npy  RMSE_cvscores_rep3.npy  RMSE_cvscores_rep4.npy  RMSE_cvscores_rep5.npy  X_test_rep1.npy  X_test_rep2.npy  X_test_rep3.npy  X_test_rep4.npy  X_test_rep5.npy  X_train_rep1.npy  X_train_rep2.npy  X_train_rep3.npy  X_train_rep4.npy  X_train_rep5.npy  preprocess_config_rep0.json  preprocess_config_rep1.json  preprocess_config_rep2.json  preprocess_config_rep3.json  preprocess_config_rep4.json  scores.csv  y_predict_heldout.npy  y_predict_newexperiments.npy  y_predict_rep1.npy  y_predict_rep2.npy  y_predict_rep3.npy  y_predict_rep4.npy  y_predict_rep5.npy  y_test_rep1.npy  y_test_rep2.npy  y_test_rep3.npy  y_test_rep4.npy  y_test_rep5.npy
experiments/Consensus_model_B/: MinMaxScaler.pkl  RMSE_cvscores_rep1.npy  RMSE_cvscores_rep2.npy  RMSE_cvscores_rep3.npy  RMSE_cvscores_rep4.npy  RMSE_cvscores_rep5.npy  X_test_rep1.npy  X_test_rep2.npy  X_test_rep3.npy  X_test_rep4.npy  X_test_rep5.npy  X_train_rep1.npy  X_train_rep2.npy  scores.csv  (+20 more)
origamiregressor/: SVRsearchSpace.py  XGBoostSpace.py  experimentManager.py
script/: experiment_config.yaml  preprocess_config.yaml  regressor_pipeline.py  results_analysis.py
(+188 files in other folders)
