# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "origamiregressor"  # This is the name on PyPI / for pip install
version = "0.1.0"
description = "ML models to predict the stability of DNA origami particles."
authors = [
    { name = "Andrea Gardin", email = "andrea@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
include = ["origamiregressor*"]
